// Vitest Snapshot v1

exports[`if parameter has default it is shown > monochrome 1`] = `
"
PARAMETERS

  
  a      string    
  a                
  
"
`;

exports[`if parameter has default it is shown > polychrome 1`] = `
"
PARAMETERS

  
  [32ma[39m      [32mstring[39m    
  [90ma[39m                
  
"
`;

exports[`if parameter has description it is shown > monochrome 1`] = `
"
PARAMETERS

  
  a      string            
  a      Blah blah blah.   
  
"
`;

exports[`if parameter has description it is shown > polychrome 1`] = `
"
PARAMETERS

  
  [32ma[39m      [32mstring[39m            
  [90ma[39m      Blah blah blah.   
  
"
`;

exports[`if there is optional param it is shown > monochrome 1`] = `
"
PARAMETERS

  
  a      string    
  a                
  
"
`;

exports[`if there is optional param it is shown > polychrome 1`] = `
"
PARAMETERS

  
  [32ma[39m      [32mstring[39m    
  [90ma[39m                
  
"
`;

exports[`long description wraps within column > monochrome 1`] = `
"
PARAMETERS

  
  a      string                                     
  a      Blah blah blah. Blah blah blah. Blah bla   
         h blah.                                    
  
"
`;

exports[`long description wraps within column > polychrome 1`] = `
"
PARAMETERS

  
  [32ma[39m      [32mstring[39m                                     
  [90ma[39m      Blah blah blah. Blah blah blah. Blah bla   
         h blah.                                    
  
"
`;
